tests/baselines/reference/moduleAugmentationWithNonExistentNamedImport.errors.txt
tests/cases/compiler/bar.d.ts(1,10): error TS2305: Module '"./foo"' has no exported member 'Bar'.


==== tests/cases/compiler/foo.d.ts (0 errors) ====
    export = Foo;
    export as namespace Foo;
    
    declare namespace Foo {
        function foo();
    }
    
    declare global {
        namespace Bar { }
    }
    
==== tests/cases/compiler/bar.d.ts (1 errors) ====
    import { Bar } from './foo';
             ~~~
!!! error TS2305: Module '"./foo"' has no exported member 'Bar'.
    export = Bar;
    export as namespace Bar;